--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/contactRecyclerView"
             android:layout_width="match_parent"
+            android:scrollbars="vertical"
             android:layout_height="wrap_content" />
 
 
